fix(kdrive-desktop-ci): update test dependencies version for CI jobs
Changed the test_dependencies_version from test-lightweight-lib-1 to test-lightweight-lib-v2 for Windows, Linux, and macOS CI jobs to ensure compatibility with the latest library updates.

--- a/.github/workflows/kdrive-desktop-ci.yml
+++ b/.github/workflows/kdrive-desktop-ci.yml
@@ -81,7 +81,7 @@ jobs:
          uses: ./.github/actions/test_windows
          with:  
             test_name: ${{ matrix.test_name }}
-            test_dependencies_version: test-lightweight-lib-1 # ${{ vars.KDRIVE_TEST_DEPENDENCIES_VERSION }}
+            test_dependencies_version: test-lightweight-lib-v2 # ${{ vars.KDRIVE_TEST_DEPENDENCIES_VERSION }}
 
 # Tests Linux
   Test-Linux:
@@ -104,7 +104,7 @@ jobs:
          uses: ./.github/actions/test_linux
          with:  
             test_name: ${{ matrix.test_name }}
-            test_dependencies_version: test-lightweight-lib-1 # ${{ vars.KDRIVE_TEST_DEPENDENCIES_VERSION }}
+            test_dependencies_version: test-lightweight-lib-v2 # ${{ vars.KDRIVE_TEST_DEPENDENCIES_VERSION }}
 
 # Tests macOS
   Test-macOS:
@@ -127,7 +127,7 @@ jobs:
          uses: ./.github/actions/test_macos
          with:  
             test_name: ${{ matrix.test_name }}
-            test_dependencies_version: test-lightweight-lib-1 # ${{ vars.KDRIVE_TEST_DEPENDENCIES_VERSION }}
+            test_dependencies_version: test-lightweight-lib-v2 # ${{ vars.KDRIVE_TEST_DEPENDENCIES_VERSION }}
 
   Unit-Tests:
     runs-on: [self-hosted, Windows]
