--- a/src/libcommon/CMakeLists.txt
+++ b/src/libcommon/CMakeLists.txt
@@ -24,7 +24,7 @@ add_definitions(-D_UNICODE)
 set(libcommon_SRCS
     comm.h
     utility/types.h utility/types.cpp
-    utility/utility.h utility/utility.cpp
+    utility/utility_base.h utility/utility.h utility/utility.cpp
     utility/filename.h utility/commonmacros.h utility/coveragemacros.h
     utility/logiffail.h utility/qlogiffail.h
     utility/jsonparserutility.h
