--- a/.github/workflows/kdrive-desktop-release.yml
+++ b/.github/workflows/kdrive-desktop-release.yml
@@ -169,7 +169,7 @@ jobs:
 
 # Tests Windows
   test-Windows:
-    if: ${{ !github.event.inputs.skip_tests }}
+    if: ${{ github.event.inputs.skip_tests == false }}
     needs: build-Windows
     strategy:
       fail-fast: false
@@ -192,7 +192,7 @@ jobs:
            test_dependencies_version: ${{ vars.KDRIVE_TEST_DEPENDENCIES_VERSION }}
 # Tests Linux
   test-Linux:
-    if: ${{ !github.event.inputs.skip_tests }}
+    if: ${{ github.event.inputs.skip_tests == false }}
     needs: [build-Linux-amd, build-Linux-arm]
     strategy:
       fail-fast: false
@@ -216,7 +216,7 @@ jobs:
 
 # Tests macOS
   test-macOS:
-    if: ${{ !github.event.inputs.skip_tests }}
+    if: ${{ github.event.inputs.skip_tests == false }}
     needs: build-MacOS
     strategy:
       fail-fast: false
