feat: Do not setup constraints in draw method

--- a/src/front/macOS/swiftgen.yml
+++ b/src/front/macOS/swiftgen.yml
@@ -1,5 +1,5 @@
-# iOS Features - iOS
-# Copyright (C) 2025 Infomaniak Network SA
+# Infomaniak kDrive - Desktop
+# Copyright (C) 2023-2025 Infomaniak Network SA
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
