--- a/.github/actions/build_linux_amd/action.yml
+++ b/.github/actions/build_linux_amd/action.yml
@@ -166,7 +166,7 @@ runs:
           path: ${{ github.workspace }}/build-linux/build/bin/kDrive_test_common
           retention-days: 1
           compression-level: 0
-        if: steps.build.outcome == 'success'
+        if: ${{ steps.build.outcome == 'success' && inputs.release_build == 'false' }}
 
       - name: Upload build test common server executable
         uses: actions/upload-artifact@v4
@@ -175,7 +175,7 @@ runs:
           path: ${{ github.workspace }}/build-linux/build/bin/kDrive_test_common_server
           retention-days: 1
           compression-level: 0
-        if: steps.build.outcome == 'success'
+        if: ${{ steps.build.outcome == 'success' && inputs.release_build == 'false' }}
 
       - name: Upload build test server executable
         uses: actions/upload-artifact@v4
@@ -184,7 +184,7 @@ runs:
           path: ${{ github.workspace }}/build-linux/build/bin/kDrive_test_server
           retention-days: 1
           compression-level: 0
-        if: steps.build.outcome == 'success'
+        if: ${{ steps.build.outcome == 'success' && inputs.release_build == 'false' }}
 
       - name: Upload build test syncengine executable
         uses: actions/upload-artifact@v4
@@ -193,7 +193,7 @@ runs:
           path: ${{ github.workspace }}/build-linux/build/bin/kDrive_test_syncengine
           retention-days: 1
           compression-level: 0
-        if: steps.build.outcome == 'success'
+        if: ${{ steps.build.outcome == 'success' && inputs.release_build == 'false' }}
 
       - name: Upload build test parms executable
         uses: actions/upload-artifact@v4
@@ -202,7 +202,7 @@ runs:
           path: ${{ github.workspace }}/build-linux/build/bin/kDrive_test_parms
           retention-days: 1
           compression-level: 0
-        if: steps.build.outcome == 'success'
+        if: ${{ steps.build.outcome == 'success' && inputs.release_build == 'false' }}
 
       - name: Clean-up generated code
         run : rm -rf build-linux
