--- a/.github/actions/build_macos/action.yml
+++ b/.github/actions/build_macos/action.yml
@@ -111,7 +111,7 @@ runs:
         run: |
           mkdir uncached_dependencies
           if [ "${{ inputs.release_build }}" = "true" ]; then
-                ${{ github.workspace }}/build-macos/client/install/kDrive.app/Contents/Resources/*.lst ./uncached_dependencies/
+                cp ${{ github.workspace }}/build-macos/client/install/kDrive.app/Contents/Resources/*.lst ./uncached_dependencies/
           else
                 cp ${{ github.workspace }}/build-macos/client/bin/*.lst ./uncached_dependencies/
           fi
