--- a/.github/actions/build_macos/action.yml
+++ b/.github/actions/build_macos/action.yml
@@ -224,7 +224,7 @@ runs:
           path: ${{ github.workspace }}/build-macos/client/bin/kDrive_test_syncengine
           retention-days: 1
           compression-level: 0
-        if: steps.build.outcome == 'success'
+        if: ${{ steps.build.outcome == 'success' && inputs.release_build == 'false' }}
 
       - name: Upload build test parms executable
         uses: actions/upload-artifact@v4
