feat: deactivate updates based on settings file

--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -54,6 +54,7 @@ set(updater_SRCS
     updater/abstractupdater.h updater/abstractupdater.cpp
     updater/updatemanager.h updater/updatemanager.cpp
     updater/updatechecker.h updater/updatechecker.cpp
+    updater/dummyupdater.h updater/dummyupdater.cpp
 )
 
 if(APPLE)
