chore(winui3): Move pages in a dedicated folder

--- a/src/gui4/windows/kDrive client/kDrive client/kDrive client.csproj
+++ b/src/gui4/windows/kDrive client/kDrive client/kDrive client.csproj
@@ -72,5 +72,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Assets\icons\" />
+    <Folder Include="Pages\" />
   </ItemGroup>
 </Project>
