feat(sync): enhance sync management and UI updates
Updated SVG icons, added BooleanToVisibilityInverterConverter, and refactored code to focus on syncs instead of drives. Introduced SyncActivity class and SyncActivityTable for better tracking and display of sync activities. Updated view models and XAML bindings accordingly.

--- a/src/gui4/windows/kDrive client/kDrive client/kDrive client.csproj
+++ b/src/gui4/windows/kDrive client/kDrive client/kDrive client.csproj
@@ -79,6 +79,11 @@
     <Folder Include="AnimatedElements\" />
   </ItemGroup>
   <ItemGroup>
+    <Page Update="CustomControls\SyncActivityTable.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
     <Page Update="Pages\KSuiteUpgradeBar.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
