--- a/.github/actions/build_windows/action.yml
+++ b/.github/actions/build_windows/action.yml
@@ -73,10 +73,10 @@ runs:
       - name: Fetch dependencies
         run: |
           mkdir dependencies
-          # kDrivecommonserver_vfs_win lib is not cached and therefore is uploaded as a separate artifact
+          # kDrive_vfs_win lib is not cached and therefore is uploaded as a separate artifact
           Get-ChildItem -Path ${{ github.workspace }}/build-windows/install/bin/ -Filter "*.dll" |
               Where-Object {
-                      $_.Name -ne "kDrivecommonserver_vfs_win.dll" -and
+                      $_.Name -ne "kDrive_vfs_win.dll" -and
                       $_.Name -ne "KDContextMenu.dll" -and
                       $_.Name -ne "KDOverlays.dll" -and
                       $_.Name -ne "Vfs.dll"
@@ -126,7 +126,7 @@ runs:
           mkdir uncached_dependencies
           $uncached = @(
               "sync-exclude.lst",
-              "kDrivecommonserver_vfs_win.dll",
+              "kDrive_vfs_win.dll",
               "KDContextMenu.dll",
               "KDOverlays.dll",
               "Vfs.dll"
