--- a/extensions/windows/cfapi/Vfs/Vfs.vcxproj
+++ b/extensions/windows/cfapi/Vfs/Vfs.vcxproj
@@ -172,7 +172,7 @@ copy /Y "$(TargetDir)$(TargetName).pdb" "C:\Projects\desktop-kDrive-build_deb\."
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;VFS_EXPORTS;_WINDOWS;_USRDLL;KDC_AUMID=L"$(KDC_PHYSICAL_AUMID)";%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;VFS_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
