--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -47,6 +47,8 @@ set(server_SRCS
     comm/abstractcommchannel.h comm/abstractcommchannel.cpp
     comm/abstractcommserver.h
     comm/commmanager.h comm/commmanager.cpp
+    comm/guijobs/abstractguijob.h comm/guijobs/abstractguijob.cpp
+    comm/guijobs/dummyguijob.h comm/guijobs/dummyguijob.cpp
     migration/migrationparams.h migration/migrationparams.cpp
     requests/serverrequests.h requests/serverrequests.cpp
     requests/offlinefilessizeestimator.h requests/offlinefilessizeestimator.cpp
