feat(auth): implement OAuth authentication handling
- Updated `App.xaml.cs` to process command-line arguments for OAuth.
- Modified `Package.appxmanifest` to update publisher info and add protocol extension.
- Refactored `CommClient.cs` for clarity and async file reading.
- Added `AddOrRelogUser` method in `CommRequests.cs`.
- Created `OAuthHelper.cs` for managing OAuth token requests.

--- a/src/gui4/windows/kDrive client/kDrive client/kDrive client.csproj
+++ b/src/gui4/windows/kDrive client/kDrive client/kDrive client.csproj
@@ -64,6 +64,8 @@
     <PublishTrimmed Condition="'$(Configuration)' == 'Debug'">False</PublishTrimmed>
     <PublishTrimmed Condition="'$(Configuration)' != 'Debug'">True</PublishTrimmed>
     <DefaultLanguage>en-US</DefaultLanguage>
+    <PackageCertificateThumbprint>B1D273E77CAF9DBDA865896F3C51A3EB31C6C5AD</PackageCertificateThumbprint>
+    <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
   </PropertyGroup>
   <ItemGroup>
     <Page Update="CustomControls\ErrorItem.xaml">
