feat(CommChannel): Implement SocketCommServer/Chanell and move some function definition from abstract class to gui/extCommChannel

--- a/test/server/CMakeLists.txt
+++ b/test/server/CMakeLists.txt
@@ -102,6 +102,8 @@ set(testserver_SRCS
     requests/testserverrequests.h requests/testserverrequests.cpp
     appserver/testappserver.h appserver/testappserver.cpp
     comm/testabstractcommchannel.h comm/testabstractcommchannel.cpp
+    comm/testsocketcommserver.h comm/testsocketcommserver.cpp
+
 )
 
 if(APPLE)
