refactor(CommSocket): Add unit tests and fix some bug

--- a/test/server/CMakeLists.txt
+++ b/test/server/CMakeLists.txt
@@ -102,7 +102,7 @@ set(testserver_SRCS
     requests/testserverrequests.h requests/testserverrequests.cpp
     appserver/testappserver.h appserver/testappserver.cpp
     comm/testabstractcommchannel.h comm/testabstractcommchannel.cpp
-    comm/testsocketcommserver.h comm/testsocketcommserver.cpp
+    comm/testsocketcomm.h comm/testsocketcomm.cpp
 
 )
 
