feat(GuiCommChannel): Add Json handling for the gui comm layer.

--- a/test/server/CMakeLists.txt
+++ b/test/server/CMakeLists.txt
@@ -102,6 +102,7 @@ set(testserver_SRCS
     requests/testserverrequests.h requests/testserverrequests.cpp
     appserver/testappserver.h appserver/testappserver.cpp
     comm/testsocketcomm.h comm/testsocketcomm.cpp
+    comm/testguicommchannel.h comm/testguicommchannel.cpp
 
 )
 
