feat(ExtComm): Merge extcommserver.h and extcommserver_mac.h

--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -64,8 +64,9 @@ if(APPLE)
     list(APPEND server_SRCS ../common/utility_mac.cpp)
     list(APPEND server_SRCS comm/extensionjob.h comm/extensionjob.cpp)
     list(APPEND server_SRCS comm/abstractcommserver_mac.h comm/abstractcommserver_mac.mm)
+    list(APPEND server_SRCS comm/extcommserver.h comm/extcommserver.cpp)
     list(APPEND server_SRCS comm/xpccommserver_mac.h comm/xpccommserver_mac.mm)
-    list(APPEND server_SRCS comm/extcommserver_mac.h comm/extcommserver_mac.mm)
+    list(APPEND server_SRCS comm/extcommserver_mac.mm)
     list(APPEND server_SRCS comm/guicommserver_mac.mm)
     set_property(SOURCE ../common/utility_mac.cpp APPEND_STRING PROPERTY COMPILE_FLAGS "-fobjc-arc")
     set_property(SOURCE comm/abstractcommserver_mac.mm APPEND_STRING PROPERTY COMPILE_FLAGS "-fobjc-arc")
