--- a/test/server/CMakeLists.txt
+++ b/test/server/CMakeLists.txt
@@ -41,7 +41,7 @@ if(APPLE)
     list(APPEND server_SRCS ${server_srcs_path}/comm/extensionjob.h ${server_srcs_path}/comm/extensionjob.cpp)
     list(APPEND server_SRCS ${server_srcs_path}/comm/abstractcommserver_mac.h ${server_srcs_path}/comm/abstractcommserver_mac.mm)
     list(APPEND server_SRCS ${server_srcs_path}/comm/xpccommserver_mac.h ${server_srcs_path}/comm/xpccommserver_mac.mm)
-    list(APPEND server_SRCS ${server_srcs_path}/comm/extcommserver_mac.h ${server_srcs_path}/comm/extcommserver_mac.mm)
+    list(APPEND server_SRCS ${server_srcs_path}/comm/extcommserver_mac.mm)
     list(APPEND server_SRCS ${server_srcs_path}/comm/guicommserver_mac.mm)
     list(APPEND server_SRCS ${server_srcs_path}/comm/litesynccommclient_mac.h ${server_srcs_path}/comm/litesynccommclient_mac.mm)
     set_property(SOURCE ${server_srcs_path}/comm/abstractcommserver_mac.mm APPEND_STRING PROPERTY COMPILE_FLAGS "-fobjc-arc")
