chore: update build configuration and dependencies
- Updated `.gitignore` to include new build artifacts and paths.
- Added `CMakePresets.json` and `CMakeUserPresets.json` for vcpkg configuration.
- Created `vcpkg-configuration.json` for registry settings.
- Updated `vcpkg.json` with new dependencies and version overrides.

--- a/.gitignore
+++ b/.gitignore
@@ -189,7 +189,9 @@ cmake-build-debug*
 /src/libcommonserver/vfs/vfspluginmetadata.json
 
 # Conan / CMake generated file
-/CMakeUserPresets.json
+#/CMakeUserPresets.json
 # Python virtual environment folder, used by the installation of conan.
 .venv/
 /infomaniak-build-tools/windows/ksigntool/.vs/ksigntool
+/build/vcpkg_installed
+/src/gui4/windows/kDrive client/PackagingProject
