--- a/cmake/modules/MacOSXBundleInfo.plist.in
+++ b/cmake/modules/MacOSXBundleInfo.plist.in
@@ -12,6 +12,14 @@
     <string>@APPLICATION_EXECUTABLE@</string>
     <key>CFBundleIconFile</key>
     <string>@APPLICATION_ICON_NAME@.icns</string>
+    <key>CFBundleIcons</key>
+    <dict>
+        <key>CFBundlePrimaryIcon</key>
+        <dict>
+            <key>CFBundleSymbolName</key>
+            <string>kdrive.fill</string>
+        </dict>
+    </dict>
     <key>CFBundleName</key>
     <string>@APPLICATION_NAME@</string>
     <key>CFBundleIdentifier</key>
