--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -142,6 +142,8 @@ include(ECMAddAppIcon)
 
 file(GLOB_RECURSE KDRIVE_ICONS "${theme_dir}/colored/*-${APPLICATION_ICON_NAME}-icon*")
 if(APPLE)
+    # Sidebar icons for macOS < 26
+    # For macOS >= 26, the icon is defined by the value of CFBundleSymbolName in Info.plist
     file(GLOB_RECURSE KDRIVE_SIDEBAR_ICONS "${theme_dir}/colored/*-${APPLICATION_ICON_NAME}-sidebar*")
     message(STATUS "KDRIVE_SIDEBAR_ICONS: ${APPLICATION_ICON_NAME}: ${KDRIVE_SIDEBAR_ICONS}")
 endif()
